# ilc

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  rust.yml
src/: benchmark.rs  filepaths.rs  input.rs  linecollector.rs  main.rs
