[package]
name = "ilc"
version = "0.1.0"
authors = ["Peter Cunderlik <realcundo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
termion = "1.5"
structopt = "0.2"
regex = "1"
lazysort = "0.2"
ex = "0.1"
exitcode = "1"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size
codegen-units = 1